# whatnot

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml  test.py
.github/: FUNDING.yml
whatnot/: __init__.py  exc.py  interactive_login.py  queries.py  types.py  utils.py  whatnot.py
