[tool.poetry]
name = "whatnot"
version = "0.1.1"
description = "An asynchronous, unofficial Whatnot API wrapper"
authors = ["wxllow <willow@wxllow.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/wxllow/whatnot"
repository = "https://github.com/wxllow/whatnot"
keywords = ["whatnot", "api", "async"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Documentation",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
gql = "^3.3.0"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
